deploy/terraform/security/securitygroup.tf
resource "aws_security_group" "emr_master" {
  vpc_id = "${aws_vpc.main.id}"
  name = "emr_master_sg"
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags {
    Name = "jupyter"
  }
}

resource "aws_security_group" "emr_slave" {
  vpc_id = "${aws_vpc.main.id}"
  name = "emr_slave_sg"
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags {
    Name = "jupyter"
  }
}
